chore: prepare for 3.0.0 release

--- a/docs/man/quick-lint-js-lsp.8
+++ b/docs/man/quick-lint-js-lsp.8
@@ -12,10 +12,10 @@
 .\"    Author: [see the "AUTHOR(S)" section]
 .\" Generator: Asciidoctor 2.0.17
 .\"    Manual: \ \&
-.\"    Source: quick-lint-js version ﻿ 2.19.0
+.\"    Source: quick-lint-js version ﻿ 3.0.0
 .\"  Language: English
 .\"
-.TH "QUICK\-LINT\-JS\-LSP" "8" "" "quick\-lint\-js version ﻿ 2.19.0" "\ \&"
+.TH "QUICK\-LINT\-JS\-LSP" "8" "" "quick\-lint\-js version ﻿ 3.0.0" "\ \&"
 .ie \n(.g .ds Aq \(aq
 .el       .ds Aq '
 .ss \n[.ss] 0
@@ -239,7 +239,7 @@ T{
 \f(CRtsx\fP
 T}:T{
 .sp
-\f(CRexperimental\-typescript\-jsx\fP
+\f(CRtypescript\-jsx\fP
 T}
 T{
 .sp
@@ -253,21 +253,21 @@ T{
 \f(CRtypescriptsource\fP
 T}:T{
 .sp
-\f(CRexperimental\-typescript\fP
+\f(CRtypescript\fP
 T}
 T{
 .sp
 \f(CRtypescriptdefinition\fP
 T}:T{
 .sp
-\f(CRexperimental\-typescript\-definition\fP
+\f(CRtypescript\-definition\fP
 T}
 T{
 .sp
 \f(CRtypescriptreact\fP
 T}:T{
 .sp
-\f(CRexperimental\-typescript\-jsx\fP
+\f(CRtypescript\-jsx\fP
 T}
 T{
 .sp
